--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ nav ul li a {
   display: block;
   text-decoration: none;
   color: var(--text-color-light);
-  display: block;
   transition: font-weight 0.2s ease;
 }
 
@@ -70,20 +69,25 @@ nav ul li:hover {
 /*Estilo del contenedor del dropdown*/
 .dropdown {
   position: relative;
+  display: inline-block;
 }
 
 /*Ver como arreglar*/
 .dropdown-content {
   display: none;
   position: absolute;
+  top: 100%;
+  left: 0;
   background-color: var(--hover-bg-color);
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 10;
+  padding: 0;
+  margin: 0;
 }
 
 /*dentro del dropdown*/
 .dropdown-content a {
-  color: #7a3131;
+  color: var(--text-color-dark);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -270,7 +274,12 @@ nav ul li:hover {
   transform: scale(1.05); 
 }
 
-/*HACE FALTA AÑADIR TODO EXCEPTO EL NAV*/
+h2 {
+  text-align: left; 
+  margin-top: 30px; 
+  margin-left: 30px; 
+}
+
 @media (max-width: 768px) {
   .dropdown-content {
     display: none;
@@ -303,5 +312,9 @@ nav ul li:hover {
     border: none;
     padding: 10px 15px;
     font-size: 16px;
+  }
+  h2 {
+    text-align: left; /* Título alineado a la izquierda */
+    margin-left: 30px;
   }
 }
