--- a/css/style.css
+++ b/css/style.css
@@ -263,27 +263,33 @@ nav ul li:hover {
 }
 
 .download-btn {
-  display: inline-block;
-  background-color: var(--text-color-dark);
-  color: #fff;
-  width: 120px; 
-  height: 120px; 
-  font-size: 1.2em;
-  text-decoration: none;
-  border-radius: 0; 
-  transition: background-color 0.3s ease, transform 0.2s ease;
-  flex-shrink: 0; 
-  margin-left: 20px; 
-  display: flex;
-  align-items: center; 
-  justify-content: center; 
+  background-color: var(--hover-bg-color);
+  color: var(--text-color-dark);
   text-align: center;
-  border-radius: 10px;
+  border-radius: 20px;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .download-btn:hover {
-  background-color: #e04e4e;
+  background-color: var(--hover-bg-color);
   transform: scale(1.05);
+}
+.download-btn p {
+  margin: 0;
+  font-size: 1.1em;
+}
+
+.download-btn h3 {
+  margin: 5px 0;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 h2 {
