--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,36 @@
+/*Variables globales*/
 :root {
   --main-bg-color: #7a3131;
   --text-color-light: #f8f8f4;
   --text-color-dark: #7a3131;
   --hover-bg-color: #eccaca;
+  --text-color: #333;
 }
+/*Estilos generales*/
 body {
   background-color: rgb(235, 235, 235);
   color: var(--main-bg-color);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
 }
+/* Header */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: var(--text-color-light);
+}
+
 header img {
-  /*EDITAR LA IMAGEN*/
-  margin: auto;
   width: 30%;
 }
 
+/*Banderas para cambiar el idioma*/
 .language-switcher {
   display: flex;
-  gap: 30px; /* Espacio entre las banderas */
-  margin-top: 10px;
-  margin-right: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  align-items: center;
-  justify-content: flex-end; /* Alineacion a la derecha */
+  gap: 30px;
 }
 
 .flag {
@@ -35,6 +42,7 @@ header img {
   transform: scale(1.1);
 }
 
+/*Navegacion*/
 nav {
   background-color: var(--main-bg-color);
 }
@@ -42,14 +50,14 @@ nav {
 nav ul {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: center; /*No se aprecia de primeras, pero al ser pantalla peque si*/
   padding: 10px;
   margin: 0;
   list-style: none;
 }
 
 nav ul li {
-  padding: 5px;
+  padding: 10px;
   width: 120px;
   text-align: center;
   position: relative;
@@ -59,7 +67,8 @@ nav ul li a {
   display: block;
   text-decoration: none;
   color: var(--text-color-light);
-  transition: font-weight 0.2s ease;
+  transition: font-weight 0.2s ease; /*anade transicion al hacer hover*/
+  font-size: 1.2em;
 }
 
 nav ul li:hover {
@@ -67,22 +76,13 @@ nav ul li:hover {
 }
 
 /*Estilo del contenedor del dropdown*/
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/*Ver como arreglar*/
+/*ARREGLAR DE PORQUE NO SALE DEBAJO DE LA CAJA EN VEZ DEL TEXTO*/
 .dropdown-content {
   display: none;
   position: absolute;
-  top: 100%;
-  left: 0;
   background-color: var(--hover-bg-color);
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 10;
-  padding: 0;
-  margin: 0;
+  z-index: 1;
 }
 
 /*dentro del dropdown*/
@@ -98,6 +98,7 @@ nav ul li:hover {
 .dropdown-content a:hover {
   background-color: var(--main-bg-color);
   color: var(--hover-bg-color);
+  display: block;
 }
 
 /* Mostrar el contenido del dropdown cuando se hace hover sobre el contenedor */
@@ -114,11 +115,12 @@ nav ul li:hover {
   display: none; /* Ocultarlo por defecto */
 }
 
+/*Carouel de imagenes*/
 .carousel {
   position: relative;
   width: 100%;
-  max-width: 800px;
-  height: 50vh;
+  max-width: 100%;
+  height: 450px;
   margin: 0 auto;
   overflow: hidden;
   background-color: #f8f8f4;
@@ -155,13 +157,10 @@ nav ul li:hover {
   top: 50%;
   transform: translateY(-50%);
   background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
+  color: white;
   border: none;
-  font-size: 1.5rem;
   padding: 10px;
   cursor: pointer;
-  z-index: 10;
-  border-radius: 50%;
 }
 
 .carousel-control.prev {
@@ -172,10 +171,7 @@ nav ul li:hover {
   right: 10px;
 }
 
-.carousel-control:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
+/*Promociones*/
 .promotions {
   display: flex;
   justify-content: space-around;
@@ -183,16 +179,15 @@ nav ul li:hover {
   gap: 20px;
   margin: 20px auto;
   padding: 10px;
-  max-width: 1200px;
+  max-width: 100%px;
 }
 
 .promotion-item {
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 10px;
-  overflow: hidden; /* Asegura que las img no sobresalgan */
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  max-width: 300px; /* Tamaño max de cada tarjeta */
+  max-width: 300px; /* Tamano max de cada tarjeta */
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -206,6 +201,7 @@ nav ul li:hover {
   width: 100%;
   height: 200px;
   object-fit: cover;
+  border-radius: 10px;
 }
 
 .promotion-item h3 {
@@ -217,24 +213,10 @@ nav ul li:hover {
 .promotion-item p {
   font-size: 1em;
   margin: 10px 15px;
-  color: #333;
+  color: var(--text-color);
 }
 
-.promotion-item .btn {
-  display: inline-block;
-  margin: 10px 0 20px;
-  padding: 10px 20px;
-  background-color: #7a3131;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.promotion-item .btn:hover {
-  background-color: #e04e4e;
-}
-
+/*Seccion de bienvenida*/
 .welcome-section {
   text-align: left;
   background-color: #f7f7f7;
@@ -298,6 +280,32 @@ h2 {
   margin-left: 30px;
 }
 
+.footer {
+  background-color: var(--main-bg-color);
+  color: var(--text-color-light);
+  padding: 20px;
+  text-align: center;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-logo img {
+  width: 100px;
+}
+
+.footer-info {
+  font-size: 0.9em;
+}
+
+.footer-bottom {
+  margin-top: 20px;
+  font-size: 0.8em;
+}
+
 @media (max-width: 768px) {
   .dropdown-content {
     display: none;
@@ -331,6 +339,10 @@ h2 {
     padding: 10px 15px;
     font-size: 16px;
   }
+
+  .carousel {
+    height: 300px;
+  }
   h2 {
     text-align: left; /* Título alineado a la izquierda */
     margin-left: 30px;
@@ -350,34 +362,6 @@ h2 {
     margin-top: 20px; /* Añade espacio arriba del botón */
   }
 }
-
-.footer {
-  background-color: var(--main-bg-color);
-  color: var(--text-color-light);
-  padding: 20px 0;
-  text-align: center;
-}
-
-.footer-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-}
-
-.footer-logo img {
-  width: 100px;
-}
-
-.footer-info {
-  font-size: 0.9em;
-}
-
-.footer-bottom {
-  margin-top: 20px;
-  font-size: 0.8em;
-}
-
 
 /* Estilos para el formulario de contacto */
 #contactForm {
@@ -412,7 +396,7 @@ h2 {
 
 .form-group input[type="text"],
 .form-group input[type="email"] {
-  height: 35px; 
+  height: 35px;
 }
 
 button[type="submit"] {
