--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
   --text-color: #333;
 }
 /*Estilos generales*/
+
 body {
   background-color: rgb(235, 235, 235);
   color: var(--main-bg-color);
@@ -176,6 +177,12 @@ nav ul li:hover {
 .promotions-title {
   text-align: left;
   margin: 30px 90px;
+}
+
+.promotions a {
+  text-decoration: none;
+  color: inherit;
+  display: block;
 }
 
 .promotions {
@@ -456,4 +463,70 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: var(--hover-bg-color);
   color: var(--main-bg-color);
+}
+
+/*Promociones general*/
+.promociones{
+  padding: 40px 20px;
+  max-width: 800px;
+  margin: 0 auto;
+  color: #333;
+}
+
+/* Migas de pan */
+.promociones .migas-de-pan {
+  font-size: 0.9em;
+  color: #666;
+
+}
+
+.migas-de-pan p {
+  margin: 0;
+}
+
+/* Titulo de la pagina */
+.destination-title {
+  font-size: 2.5em;
+  color: var(--main-bg-color);
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* Informacion basica */
+.info-basica {
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+.info-basica p {
+  font-size: 1.1em;
+  margin: 5px 0;
+  color: #555;
+}
+
+/* Itinerario */
+.itinerario {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.dia {
+  margin-bottom: 30px;
+}
+
+.dia h2 {
+  font-size: 1.5em;
+  color: var(--main-bg-color);
+  margin-bottom: 10px;
+  border-bottom: 2px solid var(--main-bg-color);
+  padding-bottom: 5px;
+}
+
+.dia p {
+  font-size: 1em;
+  line-height: 1.6;
+  color: #555;
+  margin: 0;
 }
