--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,17 @@
   --text-color-dark: #7a3131;
   --hover-bg-color: #eccaca;
   --text-color: #333;
+  --base-font-size: 16px;
 }
 /*Estilos generales*/
-
+html {
+  font-size: var(--base-font-size);
+}
 body {
   background-color: rgb(235, 235, 235);
   color: var(--main-bg-color);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1rem;
   margin: 0;
   padding: 0;
 }
@@ -20,7 +24,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 0.625rem 1.25rem; 
   background-color: var(--text-color-light);
 }
 
@@ -31,11 +35,11 @@ header .logo {
 /*Banderas para cambiar el idioma*/
 .language-switcher {
   display: flex;
-  gap: 30px;
+  gap: 1.8rem;
 }
 
 .flag {
-  width: 32px;
+  width: 2rem;
   transition: transform 0.2s ease-in-out;
 }
 
@@ -55,13 +59,13 @@ nav ul {
   display: flex;
   justify-content: space-evenly;
   align-items: center; /*No se aprecia de primeras, pero al ser pantalla peque si*/
-  padding: 10px;
+  padding: 0.6rem;
   margin: 0;
   list-style: none;
 }
 
 nav ul li {
-  padding: 10px;
+  padding: 0.6rem;
   width: 100%;
   text-align: center;
   position: relative;
@@ -72,7 +76,7 @@ nav ul li a {
   text-decoration: none;
   color: var(--text-color-light);
   transition: font-weight 0.2s ease; /*anade transicion al hacer hover*/
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 
 nav ul li:hover {
@@ -80,23 +84,21 @@ nav ul li:hover {
 }
 
 /*Estilo del contenedor del dropdown*/
-/*ARREGLAR DE PORQUE NO SALE DEBAJO DE LA CAJA EN VEZ DEL TEXTO*/
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: var(--hover-bg-color);
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  width: 100%; /* Ajusta el ancho al 100% del contenedor padre */
-  top: 100%; /* Coloca el dropdown justo debajo del contenedor padre */
-  left: 0; /* Alinea el dropdown con el inicio del elemento padre */
-  background-color: var(--hover-bg-color);
+  width: 100%; 
+  top: 100%; 
+  left: 0; 
 }
 
 /*dentro del dropdown*/
 .dropdown-content a {
   color: var(--text-color-dark);
-  padding: 12px 16px;
+  padding: 0.75rem 1rem;
   text-decoration: none;
   display: block;
   width: 100%; /*area clicable sea completa */
@@ -117,7 +119,7 @@ nav ul li:hover {
   display: none;
 }
 
-/* Botun del menu */
+/* Boton del menu */
 #menuToggle {
   display: none; /* Ocultarlo por defecto */
 }
@@ -126,7 +128,7 @@ nav ul li:hover {
 .carousel {
   position: relative;
   width: 100%;
-  height: 450px;
+  height: 28.125rem;
   overflow: hidden;
 }
 
@@ -155,9 +157,9 @@ nav ul li:hover {
   background-color: rgba(0, 0, 0, 0.4);
   color: var(--hover-bg-color);
   font-weight: bold;
-  padding: 10px;
-  padding-left: 100px;
-  font-size: 2dvh;
+  padding: 0.6rem;
+  padding-left: 6.25rem;
+  font-size: 1.25rem;
   text-align: left;
 }
 
@@ -168,26 +170,27 @@ nav ul li:hover {
   background-color: rgba(0, 0, 0, 0.5);
   color: var(--text-color-light);
   border: none;
-  padding: 10px;
+  padding: 0.6rem;
   cursor: pointer;
 }
 
 .carousel-control.prev {
-  left: 10px;
+  left: 0.6rem;
 }
 
 .carousel-control.next {
-  right: 10px;
+  right: 0.6rem;
 }
+
 /*Promociones*/
 .promotions-title {
   text-align: left;
-  margin: 30px 90px;
+  margin: 1.875rem 5.625rem;
 }
 
 .promotions a {
   text-decoration: none;
-  color: inherit;
+  color: var(--main-bg-color);
   display: block;
 }
 
@@ -195,17 +198,17 @@ nav ul li:hover {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  gap: 20px;
-  margin: 20px auto;
-  padding: 10px;
+  gap: 1.25rem;
+  margin: 1.25rem auto;
+  padding: 0.6rem; 
 }
 
 .promotion-item {
   background-color: #fff;
   border: 1px solid #ddd;
-  border-radius: 10px;
+  border-radius: 0.6rem; 
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  max-width: 300px; /* Tamano max de cada tarjeta */
+  max-width: 18.75rem; /* Tamano max de cada tarjeta */
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -217,20 +220,20 @@ nav ul li:hover {
 
 .promotion-item img {
   width: 100%;
-  height: 200px;
+  height: 12.5rem;
   object-fit: cover;
-  border-radius: 10px 10px 0 0;
+  border-radius: 0.62rem 0.62rem 0 0;
 }
 
 .promotion-item h3 {
   font-size: 1.5em;
-  margin: 10px 0;
+  margin: 0.62rem 0;
   color: var(--main-bg-color);
 }
 
 .promotion-item p {
   font-size: 1em;
-  margin: 10px 15px;
+  margin: 0.62rem 0.9rem;
   color: var(--text-color);
 }
 
@@ -240,24 +243,24 @@ nav ul li:hover {
   justify-content: space-between;
   align-items: center;
   background-color: #f7f7f7;
-  padding: 40px 20px;
-  margin: 20px auto;
-  border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 1200px;
+  padding: 2.5rem 1.25rem;
+  margin: 1.25rem auto;
+  border-radius: 0.62rem;
+  box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  max-width: 75rem;
 }
 
 .welcome-section h2 {
-  font-size: 2.5em;
+  font-size: 2.5rem;
   color: var(--text-color-dark);
 }
 
 .welcome-section p {
-  font-size: 1.2em;
+  font-size: 1.2rem;
   color: var(--text-color);
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
   line-height: 1.6;
-  max-width: 900px;
+  max-width:  56.25rem; /* 900px */
 }
 
 /*Boton de descarga del catalogo*/
@@ -265,14 +268,14 @@ nav ul li:hover {
   background-color: var(--hover-bg-color);
   color: var(--text-color-dark);
   text-align: center;
-  border-radius: 20px;
-  width: 200px;
-  height: 200px;
+  border-radius: 1.25rem; /* 20px */
+  width: 12.5rem; /* 200px */
+  height: 12.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -282,17 +285,17 @@ nav ul li:hover {
 }
 .download-btn p {
   margin: 0;
-  font-size: 1.1em;
+  font-size: 1.1rem;
 }
 
 .download-btn h3 {
-  margin: 5px 0;
-  font-size: 1.5em;
+  margin: 0.3rem 0;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
 .download-btn .iconDownload{
-  width: 100px; /* Ajusta el tamaño según sea necesario */
+  width: 6.25rem; /* Ajusta el tamaño según sea necesario */
   height: auto; /* Mantiene la proporción de la imagen */
 }
 
@@ -300,7 +303,7 @@ nav ul li:hover {
 .footer {
   background-color: var(--main-bg-color);
   color: var(--text-color-light);
-  padding: 20px;
+  padding: 1.25rem;
   text-align: center;
 }
 
@@ -308,27 +311,27 @@ nav ul li:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
+  max-width: 75rem;
   margin: 0 auto;
 }
 
 .footer-logo img {
-  width: 200px;
+  width: 12.5rem; /* 200px */
 }
 
 .footer-info {
-  font-size: 0.9em;
+  font-size: 0.9rem; /* 14.4px */
 }
 
 .footer-bottom {
-  margin-top: 20px;
-  font-size: 0.8em;
+  margin-top: 1.25rem; /* 20px */
+  font-size: 0.8rem; /* 12.8px */
 }
 
 .footer-bottom a {
   color: var(--text-color-light);
   text-decoration: none;
-  margin: 0 10px;
+  margin: 0 0.625rem; /* 10px */
 }
 
 .footer-bottom a:hover {
@@ -345,12 +348,12 @@ nav ul li:hover {
   header {
     flex-direction: column;
     align-items: flex-start;
-    padding: 10px;
+    padding: 0.625rem;
   }
 
   .language-switcher {
-    margin-top: 10px;
-    gap: 15px;
+    margin-top: 0.625rem; 
+    gap: 0.9375rem;
   }
 
   /*Ajustes del dropwdown */
@@ -373,7 +376,7 @@ nav ul li:hover {
 
   nav ul li {
     width: 100%;
-    padding: 10px 20px;
+    padding: 0.625rem 1.25rem;
   }
 
   nav ul.active {
@@ -387,70 +390,70 @@ nav ul li:hover {
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 45px;
-    right: 25px;
+    top: 2.8125rem; /* 45px */
+    right: 1.5625rem; /* 25px */
     background-color: var(--main-bg-color);
     border: none;
-    width: 50px;
-    height: 50px;
+    width: 3.125rem; /* 50px */
+    height: 3.125rem;
     padding: 0;
     cursor: pointer;
   }
-  
+
   #menuToggle .line {
-    width: 30px; 
-    height: 3.5px; 
-    background-color: var(--text-color-light); 
-    border-radius: 1px; 
-    margin-bottom: 5px; 
-    margin-top: 5px;
+    width: 1.875rem; /* 30px */
+    height: 0.21875rem; /* 3.5px */
+    background-color: var(--text-color-light);
+    border-radius: 0.0625rem; /* 1px */
+    margin-bottom: 0.3125rem; /* 5px */
+    margin-top: 0.3125rem;
   }
 
   /*Carousel de imagenes*/
   .carousel {
-    height: 250px;
+    height: 15.625rem; /* 250px */
   }
 
   .carousel-caption {
-    padding: 5px;
+    padding: 0.3125rem;
     font-size: 1.5dvh;
   }
 
   .carousel-control {
-    padding: 5px;
+    padding: 0.3125rem;
   }
 
   /*Promociones*/
   .promotion-item {
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
   }
 
   .promotion-item h3 {
-    font-size: 1.2em;
+    font-size: 1.2rem;
   }
 
   .promotion-item p {
-    font-size: 0.9em;
+    font-size: 0.9rem;
   }
 
   /*Bienvenida*/
   .welcome-section {
     flex-direction: column;
     text-align: center;
-    padding: 20px;
+    padding: 1.25rem; /* 20px */
   }
   .welcome-section h2 {
-    font-size: 2em;
+    font-size: 2rem;
   }
 
   .welcome-section p {
-    font-size: 1em;
+    font-size: 1rem;
     max-width: 100%;
   }
 
   /*boton descarga del catalogo*/
   .download-btn {
-    margin-top: 20px; 
+    margin-top: 1.25px; 
   }
 
   .download-btn h3 {
@@ -462,7 +465,7 @@ nav ul li:hover {
   }
 
   .download-btn .iconDownload {
-    width: 70px;
+    width: 4.375rem;
   }
 
   /*Footer*/
@@ -473,80 +476,80 @@ nav ul li:hover {
   }
 
   .footer-logo img {
-    width: 150px;
+    width: 9.375rem; /* 150px */
   }
 
   .footer-info {
-    font-size: 0.8em;
+    font-size: 0.8rem;
   }
 
   .footer-bottom {
-    font-size: 0.7em;
+    font-size: 0.7rem;
   }
 }
 
 /* Estilos para el formulario de contacto */
 .contact-title h2 {
-  font-size: 1.5em;
-  margin: 10px 0;
+  font-size: 1.5rem; /* 24px */
+  margin: 0.625rem 0; /* 10px */
   color: var(--main-bg-color);
   text-align: left;
-  margin: 30px 90px;
+  margin: 1.875rem 5.625rem; /* 30px 90px */
 }
+
 #contactForm {
   background-color: #fff;
-  padding: 30px;
-  border-radius: 15px;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
+  padding: 1.875rem; 
+  border-radius: 0.9375rem; /* 15px */
+  box-shadow: 0px 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  max-width: 31.25rem; /* 500px */
   width: 100%;
-  margin: 20px auto;
+  margin: 1.25rem auto; /* 20px */
   border: 1px solid #e0e0e0;
 }
 
 .form-group {
-  margin-bottom: 15px;
-  margin-right: 15px;
+  margin-bottom: 0.9375rem; 
+  margin-right: 0.9375rem; 
 }
 
 .form-group label {
   display: block;
-  margin-bottom: 8px;
+  margin-bottom: 0.5rem; /* 8px */
   font-weight: 600;
   color: var(--text-color-dark);
-  font-size: 1em;
+  font-size: 1rem; 
 }
 
 .form-group input,
 .form-group textarea {
   width: 100%;
-  padding: 12px;
+  padding: 0.75rem; 
   border: 1px solid var(--hover-bg-color);
-  border-radius: 8px;
-  font-size: 1em;
+  border-radius: 0.5rem;
+  font-size: 1rem; 
 }
 
-/*efecto de cuando se clica al formulario*/
 .form-group input:focus,
 .form-group textarea:focus {
   border-color: var(--main-bg-color);
-  box-shadow: 0px 0px 8px rgba(122, 49, 49, 0.2);
+  box-shadow: 0px 0px 0.5rem rgba(122, 49, 49, 0.2);
   outline: none;
 }
 
 .form-group input[type="text"],
 .form-group input[type="email"] {
-  height: 35px;
+  height: 2.1875rem; /* 35px */
 }
 
 button[type="submit"] {
   background-color: var(--main-bg-color);
   color: var(--text-color-light);
-  padding: 12px 20px;
+  padding: 0.75rem 1.25rem;
   border: none;
-  border-radius: 8px;
+  border-radius: 0.5rem; /* 8px */
   cursor: pointer;
-  font-size: 1em;
+  font-size: 1rem; /* 16px */
   width: 100%;
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
@@ -559,40 +562,39 @@ button[type="submit"]:hover {
 @media (max-width: 768px) {
   /*Formulario de contacto*/
   #contactForm {
-    padding: 20px;
+    padding: 1.25rem;
     max-width: 90%;
   }
 
   .form-group label {
-    font-size: 0.9em;
+    font-size: 0.9rem;
   }
 
   .form-group input,
   .form-group textarea {
-    font-size: 0.9em;
-    padding: 10px;
+    font-size: 0.9rem;
+    padding: 0.625rem; /* 10px */
   }
 
   button[type="submit"] {
-    font-size: 0.9em;
-    padding: 10px 15px;
+    font-size: 0.9rem;
+    padding: 0.625rem 0.9375rem; 
   }
 }
 
-
 /*Promociones general*/
 .promociones{
-  padding: 40px 20px;
-  max-width: 800px;
+  padding: 2.5rem 1.25rem;
+  max-width: 50rem;
   margin: 0 auto;
-  color: #333;
+  color: var(--text-color);
+  text-align: justify;
 }
 
 /* Migas de pan */
 .promociones .migas-de-pan {
-  font-size: 0.9em;
+  font-size: 0.9rem;
   color: #666;
-
 }
 
 .migas-de-pan p {
@@ -601,81 +603,143 @@ button[type="submit"]:hover {
 
 /* Titulo de la pagina */
 .destination-title {
-  font-size: 2.5em;
+  font-size: 2.5rem;
   color: var(--main-bg-color);
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   text-align: center;
 }
 
 /* Informacion basica */
 .info-basica {
   text-align: left;
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
 }
 
 .info-basica p {
-  font-size: 1.1em;
-  margin: 5px 0;
+  font-size: 1.1rem;
+  margin:  0.3125rem 0; /* 5px */
   color: #555;
 }
 
 /* Itinerario */
 .itinerario {
   background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 1.25rem; /* 20px */
+  border-radius: 0.625rem; /* 10px */
+  box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
 }
 
 .dia {
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
+}
+
+.dia .texto {
+  flex: 2;
+}
+
+.dia.con-imagen {
+  display: flex;
+  gap: 1.25rem;
+}
+
+.dia.con-imagen .texto {
+  flex: 2;
+}
+
+.dia.con-imagen .imagen {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dia.con-imagen .imagen img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 0.625rem;
+  box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
 }
 
 .dia h2 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   color: var(--main-bg-color);
-  margin-bottom: 10px;
-  border-bottom: 2px solid var(--main-bg-color);
-  padding-bottom: 5px;
+  margin-bottom: 0.625rem;
+  border-bottom: 0.125rem solid var(--main-bg-color); 
+  padding-bottom: 0.3125rem; /* 5px */
 }
 
 .dia p {
-  font-size: 1em;
+  font-size: 1rem;
   line-height: 1.6;
   color: #555;
   margin: 0;
 }
 
+.info-boxes {
+  display: flex;
+  justify-content: space-between;
+  gap: 1.25rem; /* 20px */
+  margin-top: 2.5rem; /* 40px */
+}
+
+.info-box {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 0.625rem;
+  padding: 1.25rem;
+  box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  flex: 1;
+}
+
+.info-box h3 {
+  font-size: 1.5rem;
+  color: var(--main-bg-color);
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.info-box ul {
+  padding-left: 1.25rem;
+}
+
+.info-box ul li {
+  margin-bottom: 0.625rem; 
+  text-align: justify;
+}
+
 @media (max-width: 768px) {
   .promociones .migas-de-pan {
-    font-size: 0.8em;
+    font-size: 0.8rem;
   }
 
   .destination-title {
-    font-size: 2em;
+    font-size: 2rem;
   }
 
   .info-basica p {
-    font-size: 0.9em;
+    font-size: 0.9rem;
+  }
+  .dia {
+    flex-direction: column;
   }
 
   .dia h2 {
-    font-size: 1.2em;
+    font-size: 1.2rem;
   }
 
   .dia p {
-    font-size: 0.9em;
+    font-size: 0.9rem;
   }
 
   .itinerario {
-    padding: 15px;
+    padding: 0.9375rem;
   }
 
-  .dia h2 {
-    font-size: 1.2em;
+  .info-boxes {
+    flex-direction: column;
   }
 
-  .dia p {
-    font-size: 0.9em;
+  .dia .imagen {
+    order: -1; 
   }
 }
