--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,20 @@
   --text-color-dark: #7a3131;
   --hover-bg-color: #eccaca;
   --text-color: #333;
+  --text-lighter-color: #666;
+  --bg-color:rgb(235, 235, 235);
+  --bg-text-color: white;
+
   --base-font-size: 16px;
+
+  --base-max-content-width: 75rem; /* 1200px */
 }
 /*Estilos generales*/
 html {
   font-size: var(--base-font-size);
 }
 body {
-  background-color: rgb(235, 235, 235);
+  background-color: var(--bg-color);
   color: var(--main-bg-color);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1rem;
@@ -204,8 +210,8 @@ nav ul li:hover {
 }
 
 .promotion-item {
-  background-color: #fff;
-  border: 1px solid #ddd;
+  background-color: var(--bg-text-color);
+  border: 1px solid var(--hover-bg-color);
   border-radius: 0.6rem; 
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   max-width: 18.75rem; /* Tamano max de cada tarjeta */
@@ -242,12 +248,12 @@ nav ul li:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f7f7f7;
-  padding: 2.5rem 1.25rem;
+  background-color: var(--bg-text-color);
+  padding: 2.5rem;
   margin: 1.25rem auto;
   border-radius: 0.62rem;
   box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
-  max-width: 75rem;
+  max-width: var(--base-max-content-width);
 }
 
 .welcome-section h2 {
@@ -489,28 +495,63 @@ nav ul li:hover {
 }
 
 /* Estilos para el formulario de contacto */
+.contact-box {
+  background-color: var(--bg-text-color);
+  padding: 2rem;
+  border-radius: 0.625rem;
+  box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  max-width: var(--base-max-content-width);
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+/* Estilos para el texto de contacto */
+.contact-info {
+  flex: 1;
+}
+
+.contact-info p {
+  font-size: 1.1rem;
+  color: var(--text-color);
+  text-align: justify;
+  padding-right: 0.5rem;
+}
+
+.contact-info ul {
+  list-style: none;
+  padding: 0;
+}
+
+.contact-info ul li {
+  font-size: 1rem;
+  color: var(--text-color);
+  margin-bottom: 0.5rem;
+}
 .contact-title h2 {
   font-size: 1.5rem; /* 24px */
-  margin: 0.625rem 0; /* 10px */
   color: var(--main-bg-color);
-  text-align: left;
+  text-align: center;
   margin: 1.875rem 5.625rem; /* 30px 90px */
 }
 
+/* Estilos para el formulario de contacto */
 #contactForm {
-  background-color: #fff;
-  padding: 1.875rem; 
-  border-radius: 0.9375rem; /* 15px */
-  box-shadow: 0px 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  max-width: 31.25rem; /* 500px */
-  width: 100%;
-  margin: 1.25rem auto; /* 20px */
-  border: 1px solid #e0e0e0;
+  flex: 1;
+  background-color: var(--bg-text-color);
+  padding: 1.5rem;
+  border-radius: 0.625rem;
+  box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .form-group {
   margin-bottom: 0.9375rem; 
   margin-right: 0.9375rem; 
+  width: 100%;
 }
 
 .form-group label {
@@ -528,6 +569,7 @@ nav ul li:hover {
   border: 1px solid var(--hover-bg-color);
   border-radius: 0.5rem;
   font-size: 1rem; 
+  box-sizing: border-box;
 }
 
 .form-group input:focus,
@@ -540,6 +582,30 @@ nav ul li:hover {
 .form-group input[type="text"],
 .form-group input[type="email"] {
   height: 2.1875rem; /* 35px */
+}
+
+.checkbox-label {
+  display: inline-flex; 
+  align-items: center; 
+  gap: 1rem; 
+  font-size: 0.95rem; 
+  color: var(--text-color-dark);
+}
+
+.checkbox-label a {
+  color: var(--main-bg-color);
+  text-decoration: underline;
+}
+
+.checkbox-label a:hover {
+  color: var(--hover-bg-color);
+}
+
+input[type="checkbox"] {
+  width: 1rem;
+  height: 1rem;
+  cursor: pointer;
+  accent-color: var(--main-bg-color); /* Color del check */
 }
 
 button[type="submit"] {
@@ -561,9 +627,14 @@ button[type="submit"]:hover {
 
 @media (max-width: 768px) {
   /*Formulario de contacto*/
+  .contact-box {
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1.5rem;
+  }
   #contactForm {
     padding: 1.25rem;
-    max-width: 90%;
+    max-width: 100%;
   }
 
   .form-group label {
@@ -574,18 +645,41 @@ button[type="submit"]:hover {
   .form-group textarea {
     font-size: 0.9rem;
     padding: 0.625rem; /* 10px */
+    width: 100%;
   }
 
   button[type="submit"] {
     font-size: 0.9rem;
     padding: 0.625rem 0.9375rem; 
   }
+
+  #contactForm {
+    max-width: 100%;
+  }
+
+  .checkbox-label {
+    display: inline-flex; 
+    align-items: center; 
+    gap: 0.5rem; 
+    font-size: 0.85rem; 
+    flex-wrap: wrap; 
+  }
+
+  .checkbox-label a {
+    overflow-wrap: break-word; 
+    word-break: break-word;
+  }
+  
+  input[type="checkbox"] {
+    width: 0.9rem;
+    height: 0.9rem;
+  }
 }
 
 /*Promociones general*/
 .promociones{
   padding: 2.5rem 1.25rem;
-  max-width: 50rem;
+  max-width: 75rem;
   margin: 0 auto;
   color: var(--text-color);
   text-align: justify;
@@ -618,15 +712,28 @@ button[type="submit"]:hover {
 .info-basica p {
   font-size: 1.1rem;
   margin:  0.3125rem 0; /* 5px */
-  color: #555;
+  color: var(--text-lighter-color);
+}
+
+.info-basica .precio {
+  font-size: 1.6rem; 
+  font-weight: bold;
+  font-style: italic;
+  color: var(--text-color); 
+  text-align: right; 
 }
 
 /* Itinerario */
 .itinerario {
-  background-color: #fff;
-  padding: 1.25rem; /* 20px */
-  border-radius: 0.625rem; /* 10px */
+  background-color: var(--bg-text-color);
+  padding: 2rem;
+  border-radius: 0.625rem;
   box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  max-width: var(--base-max-content-width);
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .dia {
@@ -671,7 +778,7 @@ button[type="submit"]:hover {
 .dia p {
   font-size: 1rem;
   line-height: 1.6;
-  color: #555;
+  color: var(--text-color);
   margin: 0;
 }
 
@@ -679,12 +786,12 @@ button[type="submit"]:hover {
   display: flex;
   justify-content: space-between;
   gap: 1.25rem; /* 20px */
-  margin-top: 2.5rem; /* 40px */
+  margin-top: 2.5rem; /* 40px */ 
 }
 
 .info-box {
-  background-color: #fff;
-  border: 1px solid #ddd;
+  background-color: var(--bg-text-color);
+  border: 1px solid var(--hover-bg-color);
   border-radius: 0.625rem;
   padding: 1.25rem;
   box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
@@ -714,32 +821,53 @@ button[type="submit"]:hover {
 
   .destination-title {
     font-size: 2rem;
+    text-align: center;
   }
 
   .info-basica p {
     font-size: 0.9rem;
   }
-  .dia {
+
+  .info-basica .precio {
+    font-size: 1.2rem; 
+  }
+
+  .itinerario {
+    display: flex; 
     flex-direction: column;
+    gap: 1rem;
+    padding: 1.5rem;
+    width: 100%; 
+    box-sizing: border-box; 
+  }
+
+  .dia {
+    width: 100%; 
+    margin-bottom: 1rem; 
+    display: flex;
+    flex-direction: column; 
+    gap: 1rem; 
   }
 
   .dia h2 {
     font-size: 1.2rem;
+    text-align: center;
   }
 
   .dia p {
     font-size: 0.9rem;
   }
 
-  .itinerario {
-    padding: 0.9375rem;
-  }
-
   .info-boxes {
     flex-direction: column;
+    gap: 1rem; 
+    margin-top: 1rem;
+    width: 100%;
+    box-sizing: border-box;
   }
 
   .dia .imagen {
     order: -1; 
+    margin-bottom: 1rem; 
   }
 }
